syntax = "proto3";
option go_package ="./pb";
package mesh;

service MachineService {
    rpc Create (MachineCreateRequest) returns (MachineCreateReply);
    rpc Remove (MachineRemoveRequest) returns (MachineRemoveReply);
    rpc Change (MachineChangeRequest) returns (MachineChangeReply);
    rpc Info (MachineInfoRequest) returns (MachineInfoReply);
    rpc List (MachineListRequest) returns (MachineListReply);
}

message MachineCreateRequest {
    // required
    string hostname = 1;
    // required
    string workpath = 2;
}
message MachineCreateReply {
	MachineError error = 1;
	Machine data = 2;
}

message MachineRemoveRequest {
    // required
    int64 machineID = 1;
}
message MachineRemoveReply {
	MachineError error = 1;
}

message MachineChangeRequest {
    // required
    int64 machineID = 1;
    // required
    MachineStatus status = 2;
}
message MachineChangeReply {
	MachineError error = 1;
}

message MachineInfoRequest {
    // required
    int64 machineID = 1;
}
message MachineInfoReply {
	MachineError error = 1;
	Machine data = 2;
}

message MachineListRequest {
    // default 1
    int64 page = 1;
    // default 10
    int64 count = 2;
    string key = 3;
    string value = 4;
}
message MachineListReply {
	MachineError error = 1;
    repeated Machine data = 2;
    int64 total = 3;
}

enum MachineStatus {
    MACHINE_UNKNOWN = 0;
    MACHINE_ONLINE = 1;
    MACHINE_RUNNING = 2;
    MACHINE_OFFLINE = 3;
}
message Machine {
    int64 machineID = 1;
    string hostname = 2;
    string workpath = 3;
    MachineStatus status = 4;
    string statusName = 5;
}
message MachineError {
    int64 code = 1;
    string info = 2;
}
